--- a/matrix.ipynb
+++ b/matrix.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "language": "Julia",
   "name": "",
-  "signature": "sha256:67f1ce9558daa4df558bca1fbd6bfb3d1963a4850b726b259b6f9d1733d157d5"
+  "signature": "sha256:c4e3762428ccea00dec43b2eeba8046990ca92fbf10a51c16a20f8de6299b6ad"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -45,7 +45,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 3,
+       "prompt_number": 10,
        "text": [
         "2x3 Array{Int64,2}:\n",
         " 1  2  1\n",
@@ -53,7 +53,7 @@
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
@@ -81,7 +81,7 @@
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 11
     },
     {
      "cell_type": "markdown",
@@ -113,7 +113,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 7,
+       "prompt_number": 12,
        "text": [
         "3-element Array{Int64,1}:\n",
         " 1\n",
@@ -122,7 +122,7 @@
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 12
     },
     {
      "cell_type": "code",
@@ -137,18 +137,18 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "The type of y is Array"
+        "The type of y is "
        ]
       },
       {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "{Int64,1}\n"
+        "Array{Int64,1}\n"
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 13
     },
     {
      "cell_type": "markdown",
@@ -213,23 +213,51 @@
         "construct a linearly-spaced vector\n",
         "[1,3,5,7,9]\n",
         "construct a matrix of 1s\n",
-        "[1.0 1.0 1.0\n",
+        "["
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "1.0 1.0 1.0\n",
         " 1.0 1.0 1.0]\n",
         "construct a matrix of 0s\n",
         "[0.0 0.0 0.0\n",
         " 0.0 0.0 0.0]\n",
         "construct a matrix of true\n",
-        "Bool[true true true\n",
+        "Bool["
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "true true true\n",
         "     true true true]\n",
         "construct a matrix with elements sampled from random normal\n",
-        "[-0.6 -0.49 -1.36\n",
-        " -0.22 0.07 0.79]\n",
+        "["
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "-0.12 0.59 2.01\n",
+        " 0.44 0.54 -1.22]\n",
         "construct a heterogeneous vector\n",
-        "{10,\"hello\"}\n"
+        "{10,\""
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "hello\"}\n"
        ]
       }
      ],
-     "prompt_number": 140
+     "prompt_number": 14
     },
     {
      "cell_type": "markdown",
@@ -250,7 +278,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 13,
+       "prompt_number": 15,
        "text": [
         "2x4 Array{Int64,2}:\n",
         " 1  2  1  2\n",
@@ -258,7 +286,7 @@
        ]
       }
      ],
-     "prompt_number": 13
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
@@ -275,20 +303,13 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "The number of elements in X is 8"
-       ]
-      },
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "\n",
+        "The number of elements in X is 8\n",
         "The number of rows and columns in X is (2,4)\n",
         "The number of columns in X is 4\n"
        ]
       }
      ],
-     "prompt_number": 37
+     "prompt_number": 16
     },
     {
      "cell_type": "markdown",
@@ -316,15 +337,15 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 59,
+       "prompt_number": 17,
        "text": [
         "2x3 Array{Float64,2}:\n",
-        " 2.47033e-323  1.03754e-322  9.38725e-323\n",
-        " 1.08694e-322  4.94066e-323  8.89318e-323"
+        " 2.22719e-314  2.22728e-314  2.22727e-314\n",
+        " 2.22722e-314  2.22729e-314  2.22714e-314"
        ]
       }
      ],
-     "prompt_number": 59
+     "prompt_number": 17
     },
     {
      "cell_type": "markdown",
@@ -346,7 +367,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 60,
+       "prompt_number": 18,
        "text": [
         "2x3 Array{Float64,2}:\n",
         " 3.0  3.0  3.0\n",
@@ -354,7 +375,7 @@
        ]
       }
      ],
-     "prompt_number": 60
+     "prompt_number": 18
     },
     {
      "cell_type": "markdown",
@@ -375,7 +396,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 61,
+       "prompt_number": 19,
        "text": [
         "3x3 Array{Float64,2}:\n",
         " 1.0  0.0  0.0\n",
@@ -384,7 +405,7 @@
        ]
       }
      ],
-     "prompt_number": 61
+     "prompt_number": 19
     },
     {
      "cell_type": "markdown",
@@ -405,7 +426,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 77,
+       "prompt_number": 20,
        "text": [
         "5x3 Array{Float64,2}:\n",
         " 3.0  3.0  3.0\n",
@@ -416,7 +437,7 @@
        ]
       }
      ],
-     "prompt_number": 77
+     "prompt_number": 20
     },
     {
      "cell_type": "markdown",
@@ -437,7 +458,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 159,
+       "prompt_number": 21,
        "text": [
         "3x5 Array{Float64,2}:\n",
         " 3.0  0.0  3.0  0.0  0.0\n",
@@ -446,7 +467,7 @@
        ]
       }
      ],
-     "prompt_number": 159
+     "prompt_number": 21
     },
     {
      "cell_type": "markdown",
@@ -467,7 +488,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 163,
+       "prompt_number": 22,
        "text": [
         "3x5 Array{Float64,2}:\n",
         " 3.0  0.0  3.0  0.0  0.0\n",
@@ -476,7 +497,7 @@
        ]
       }
      ],
-     "prompt_number": 163
+     "prompt_number": 22
     },
     {
      "cell_type": "markdown",
@@ -497,7 +518,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 165,
+       "prompt_number": 23,
        "text": [
         "2x2 Array{Float64,2}:\n",
         " 3.0  0.0\n",
@@ -505,7 +526,7 @@
        ]
       }
      ],
-     "prompt_number": 165
+     "prompt_number": 23
     },
     {
      "cell_type": "code",
@@ -519,7 +540,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 172,
+       "prompt_number": 24,
        "text": [
         "3x3 Array{Float64,2}:\n",
         " 3.0  0.0  3.0\n",
@@ -528,7 +549,7 @@
        ]
       }
      ],
-     "prompt_number": 172
+     "prompt_number": 24
     },
     {
      "cell_type": "markdown",
@@ -557,7 +578,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 5,
+       "prompt_number": 25,
        "text": [
         "3-element Array{Float64,1}:\n",
         "  2.0\n",
@@ -566,7 +587,7 @@
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 25
     },
     {
      "cell_type": "markdown",
@@ -595,7 +616,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 7,
+       "prompt_number": 26,
        "text": [
         "2x2 Array{Float64,2}:\n",
         " 0.1  0.2\n",
@@ -603,7 +624,7 @@
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 26
     },
     {
      "cell_type": "code",
@@ -617,7 +638,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 181,
+       "prompt_number": 27,
        "text": [
         "2x2 Array{Float64,2}:\n",
         " 10.1  1.2\n",
@@ -625,7 +646,7 @@
        ]
       }
      ],
-     "prompt_number": 181
+     "prompt_number": 27
     },
     {
      "cell_type": "markdown",
@@ -635,11 +656,24 @@
      ]
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "In Julia, data structure **sparse matrix** can be used to reduce computing time and memory when enough elements in the matrix are zeros."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<font,color=\"charcoal\">1. construct a sparse matrix of zeros</font>"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "repmat\n",
-      "searchsorted"
+      "spzeros(2,3)"
      ],
      "language": "python",
      "metadata": {},
@@ -647,15 +681,127 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 176,
+       "prompt_number": 29,
        "text": [
-        "2x3 Array{Float64,2}:\n",
-        " 0.125419  0.125419  0.125419\n",
-        " 0.170347  0.170347  0.170347"
+        "2x3 sparse matrix with 0 Float64 entries:"
        ]
       }
      ],
-     "prompt_number": 176
+     "prompt_number": 29
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<font,color=\"charcoal\">2. construct a identity sparse matrix of zeros</font>"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "S=speye(2,3)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 31,
+       "text": [
+        "2x3 sparse matrix with 2 Float64 entries:\n",
+        "\t[1, 1]  =  1.0\n",
+        "\t[2, 2]  =  1.0"
+       ]
+      }
+     ],
+     "prompt_number": 31
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<font,color=\"charcoal\">3. get index and elements</font>"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "findnz(S)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 32,
+       "text": [
+        "([1,2],[1,2],[1.0,1.0])"
+       ]
+      }
+     ],
+     "prompt_number": 32
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<font,color=\"charcoal\">4. convert dense(sparse) matrices to sparse(dense) matrices</font>"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "D=full(S)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 36,
+       "text": [
+        "2x3 Array{Float64,2}:\n",
+        " 1.0  0.0  0.0\n",
+        " 0.0  1.0  0.0"
+       ]
+      }
+     ],
+     "prompt_number": 36
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "sparse(D)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 37,
+       "text": [
+        "2x3 sparse matrix with 2 Float64 entries:\n",
+        "\t[1, 1]  =  1.0\n",
+        "\t[2, 2]  =  1.0"
+       ]
+      }
+     ],
+     "prompt_number": 37
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "> To learn more about matrix, please to check the Julia documents."
+     ]
     }
    ],
    "metadata": {}
