--- a/contents.ipynb
+++ b/contents.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "language": "Julia",
   "name": "",
-  "signature": "sha256:f3ce9ff4a5d10da3602edfa607695e2a440af8f804945333760ef903248e6085"
+  "signature": "sha256:4e55752add365572b952e62942066f158370e6fbca748513074fbb4bb7913c5c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -64,7 +64,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Multi-dimensional Arrays\n",
+      "~~Multi-dimensional Arrays~~\n",
       "\n",
       "Linear algebra"
      ]
