--- a/Matrix/matrix.ipynb
+++ b/Matrix/matrix.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "language": "Julia",
   "name": "",
-  "signature": "sha256:c4e3762428ccea00dec43b2eeba8046990ca92fbf10a51c16a20f8de6299b6ad"
+  "signature": "sha256:cfe71213c67f008b2a1ffe2c62ba75f84abecb6eba16777dd49bb53ca10073ea"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -559,10 +559,17 @@
      ]
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "**construct an array using comprehensions**"
+     ]
+    },
+    {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "const x=[1:3]\n",
+      "x=[1:3]\n",
       "s=Float64[x[i]^2+1 for i=1:length(x)]"
      ],
      "language": "python",
@@ -578,7 +585,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 25,
+       "prompt_number": 45,
        "text": [
         "3-element Array{Float64,1}:\n",
         "  2.0\n",
@@ -587,20 +594,89 @@
        ]
       }
      ],
-     "prompt_number": 25
+     "prompt_number": 45
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Broadcasting"
+      "**elementwise operator**"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "a=[1,2,3]\n",
+      "a.*a     #elemetwise operator"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 46,
+       "text": [
+        "3-element Array{Int64,1}:\n",
+        " 1\n",
+        " 4\n",
+        " 9"
+       ]
+      }
+     ],
+     "prompt_number": 46
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "**construct matrices with repeated parts**"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "m=[1 2 3]\n",
+      "println(repmat(m,2,3))\n",
+      "println(repeat(m,inner=[2,3]))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[1"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        " 2 3 1 2 3 1 2 3\n",
+        " 1 2 3 1 2 3 1 2 3]\n",
+        "[1 1 1 2 2 2 3 3 3\n",
+        " 1 1 1 2 2 2 3 3 3]\n"
+       ]
+      }
+     ],
+     "prompt_number": 55
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "**Broadcasting**"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "broadcast() can save lots of memory."
+      "broadcast( ) can save lots of memory."
      ]
     },
     {
