--- a/Index.ipynb
+++ b/Index.ipynb
@@ -11,7 +11,7 @@
   },
   "language": "Julia",
   "name": "",
-  "signature": "sha256:c129b683e8e6c36f16b2fab1138ca4ca0b5c3f1efa20047938e66cabc6d377d3"
+  "signature": "sha256:3d98916cbf25cd7a6cbabffab4c2abd3912c77466ce243c74192ee417088a168"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -89,6 +89,7 @@
       "    * [1.3](section_1/RecProb.ipynb) &nbsp; function\n",
       "    * [1.4](section_1/LD.ipynb) &nbsp; map (data structure)(learn it with example (factor incidence matrix)  )\n",
       "    * [1.5](section_1/rwfiles.ipynb) &nbsp; Read and write files <font color=\"red\">(Done)</font>\n",
+      "    * [1.6](section_1/plotting.ipynb) &nbsp; Plotting <font color=\"red\">(Done)</font>\n",
       "    * [1.4](basic/LD.ipynb) &nbsp; regular expression\n"
      ]
     },
@@ -100,8 +101,7 @@
       "  &nbsp; **Matrix**\n",
       " \n",
       "    * [2.1](matrix/matrix.ipynb) &nbsp; Matrix <font color=\"red\">(Done)</font>\n",
-      "    * [2.2](matrix/matrixAlgebra.ipynb) &nbsp; Matrix Algebra <font color=\"red\">(Done)</font>\n",
-      "<br><br>"
+      "    * [2.2](matrix/matrixAlgebra.ipynb) &nbsp; Matrix Algebra <font color=\"red\">(Done)</font>"
      ]
     },
     {
@@ -115,8 +115,7 @@
       "    * [2.1](Bayes/BayesTheorem.ipynb) &nbsp; Type(GenSim)\n",
       "    * [2.2](Bayes/BayesInference.ipynb) &nbsp; Module\n",
       "    * [2.2](Bayes/BayesInference.ipynb) &nbsp; Tricky things(Traps) in Julia\n",
-      "    * [2.2](Bayes/BayesInference.ipynb) &nbsp; Example things(Traps) in Julia\n",
-      "<br><br>"
+      "    * [2.2](Bayes/BayesInference.ipynb) &nbsp; Example things(Traps) in Julia"
      ]
     },
     {
@@ -129,9 +128,8 @@
       "\n",
       "    * [2.1](Bayes/BayesTheorem.ipynb) &nbsp; A inverse\n",
       "    * [2.3](create a package) &nbsp; Create your own pakckage\n",
-      "    * [2.2](Bayes/BayesInference.ipynb) &nbsp; Gensel package\n",
-      "\n",
-      "<br><br>"
+      "    * [2.2](Bayes/BayesInference.ipynb) &nbsp; GenSel package\n",
+      "    * [2.2](Bayes/BayesInference.ipynb) &nbsp; GenSim package"
      ]
     }
    ],
