--- a/section_1/plotting.ipynb
+++ b/section_1/plotting.ipynb
@@ -31,7 +31,18 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
+     "outputs": [
+      {
+       "ename": "LoadError",
+       "evalue": "Gadfly not found\nwhile loading In[1], in expression starting on line 1",
+       "output_type": "pyerr",
+       "traceback": [
+        "Gadfly not found\nwhile loading In[1], in expression starting on line 1",
+        "",
+        " in require at loading.jl:47"
+       ]
+      }
+     ],
      "prompt_number": 1
     },
     {
