--- a/Index.ipynb
+++ b/Index.ipynb
@@ -11,7 +11,7 @@
   },
   "language": "Julia",
   "name": "",
-  "signature": "sha256:3d98916cbf25cd7a6cbabffab4c2abd3912c77466ce243c74192ee417088a168"
+  "signature": "sha256:ebb0f5b8b5952ff3a436b5997616d1cd3488b50ebfe2fe7f942ade0ca9bae108"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -73,8 +73,9 @@
       "* Section 0:\n",
       "  &nbsp; **Introduction**\n",
       "\n",
-      "    * [0.1](section_0/introduction.ipynb) &nbsp; Why Julia\n",
-      "    * [0.2](section_0/installation.ipynb) &nbsp; Installation <font color=\"red\">(Done)</font>\n"
+      "    * [0.1](section_0/whyJulia.ipynb) &nbsp; Why Julia\n",
+      "    * [0.2](section_0/installation.ipynb) &nbsp; Installation <font color=\"red\">$\\bigstar$</font> \n",
+      "    * [0.3](section_0/run.ipynb) &nbsp; Run code <font color=\"red\">$\\bigstar$</font>"
      ]
     },
     {
@@ -88,8 +89,8 @@
       "    * [1.2](section_1/MapFunction.ipynb) &nbsp; loops/control flow?\n",
       "    * [1.3](section_1/RecProb.ipynb) &nbsp; function\n",
       "    * [1.4](section_1/LD.ipynb) &nbsp; map (data structure)(learn it with example (factor incidence matrix)  )\n",
-      "    * [1.5](section_1/rwfiles.ipynb) &nbsp; Read and write files <font color=\"red\">(Done)</font>\n",
-      "    * [1.6](section_1/plotting.ipynb) &nbsp; Plotting <font color=\"red\">(Done)</font>\n",
+      "    * [1.5](section_1/rwfiles.ipynb) &nbsp; Read and write files <font color=\"red\">$\\bigstar$</font>\n",
+      "    * [1.6](section_1/plotting.ipynb) &nbsp; Plotting <font color=\"red\">$\\bigstar$</font>\n",
       "    * [1.4](basic/LD.ipynb) &nbsp; regular expression\n"
      ]
     },
@@ -100,8 +101,8 @@
       "* Section 2:\n",
       "  &nbsp; **Matrix**\n",
       " \n",
-      "    * [2.1](matrix/matrix.ipynb) &nbsp; Matrix <font color=\"red\">(Done)</font>\n",
-      "    * [2.2](matrix/matrixAlgebra.ipynb) &nbsp; Matrix Algebra <font color=\"red\">(Done)</font>"
+      "    * [2.1](section_2/matrix.ipynb) &nbsp; Matrix <font color=\"red\">$\\bigstar$</font>\n",
+      "    * [2.2](section_2/matrixAlgebra.ipynb) &nbsp; Matrix Algebra <font color=\"red\">$\\bigstar$</font>"
      ]
     },
     {
@@ -111,11 +112,13 @@
       "* Section 3:\n",
       "  &nbsp; **Advanced**\n",
       "\n",
-      "    * [2.1](Bayes/BayesTheorem.ipynb) &nbsp; Pointer   \n",
-      "    * [2.1](Bayes/BayesTheorem.ipynb) &nbsp; Type(GenSim)\n",
-      "    * [2.2](Bayes/BayesInference.ipynb) &nbsp; Module\n",
-      "    * [2.2](Bayes/BayesInference.ipynb) &nbsp; Tricky things(Traps) in Julia\n",
-      "    * [2.2](Bayes/BayesInference.ipynb) &nbsp; Example things(Traps) in Julia"
+      "    * [2.1](section_2/pointer.ipynb) &nbsp; Pointer <font color=\"red\">(Half Done)</font>   \n",
+      "    * [2.1](section_2/BayesTheorem.ipynb) &nbsp; Type(GenSim)\n",
+      "    * [2.2](section_2/BayesInference.ipynb) &nbsp; Module\n",
+      "    * [2.2](section_2/BayesInference.ipynb) &nbsp; Tricky things(Traps) in Julia\n",
+      "    * [2.2](section_2/BayesInference.ipynb) &nbsp; Example things(Traps) in Julia\n",
+      "    * [3.6](section_2/BayesInference.ipynb) &nbsp; Closure(Traps) in Julia\n",
+      "    * [3.7](create a package) &nbsp; Create your own pakckage"
      ]
     },
     {
@@ -124,10 +127,9 @@
      "source": [
       "    \n",
       "* Section 4:\n",
-      "  &nbsp; **Examples**\n",
+      "  &nbsp; **Applications in Statistical Genetics**\n",
       "\n",
-      "    * [2.1](Bayes/BayesTheorem.ipynb) &nbsp; A inverse\n",
-      "    * [2.3](create a package) &nbsp; Create your own pakckage\n",
+      "    * [2.1](Bayes/BayesTheorem.ipynb) &nbsp; inverse numerator relationship matrix\n",
       "    * [2.2](Bayes/BayesInference.ipynb) &nbsp; GenSel package\n",
       "    * [2.2](Bayes/BayesInference.ipynb) &nbsp; GenSim package"
      ]
