--- a/Index.ipynb
+++ b/Index.ipynb
@@ -11,7 +11,7 @@
   },
   "language": "Julia",
   "name": "",
-  "signature": "sha256:ebb0f5b8b5952ff3a436b5997616d1cd3488b50ebfe2fe7f942ade0ca9bae108"
+  "signature": "sha256:5211afff1c18a4e4d0a96fea89a281f2c6d9af29af083a3b63653f581ac59518"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -103,6 +103,17 @@
       " \n",
       "    * [2.1](section_2/matrix.ipynb) &nbsp; Matrix <font color=\"red\">$\\bigstar$</font>\n",
       "    * [2.2](section_2/matrixAlgebra.ipynb) &nbsp; Matrix Algebra <font color=\"red\">$\\bigstar$</font>"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "* Section 3:\n",
+      "&nbsp; **Plotting**\n",
+      " \n",
+      "* [2.1](section_3/plotting.ipynb) &nbsp; Plotting with Gadfly <font color=\"red\">$\\bigstar$</font>\n",
+      "* [2.2](section_3/interactive.ipynb) &nbsp; Interactive Plotting"
      ]
     },
     {
