--- a/section_4_advanced/mataprogramming.ipynb
+++ b/section_4_advanced/mataprogramming.ipynb
@@ -2,7 +2,7 @@
  "metadata": {
   "language": "Julia",
   "name": "",
-  "signature": "sha256:5f873a6984c5e898f141e3a6a85b19004234bf57bf7efa773edcc4cae1c39c53"
+  "signature": "sha256:30ce798d33209559b43c766e576e69db6a7cc7038f519df54ddfda8a197133ad"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -301,6 +301,56 @@
       }
      ],
      "prompt_number": 157
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "###Why global?"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "type GenSelOptions\n",
+      "    run            # BayeB,BayesC,BayesC0,BayesR\n",
+      "\n",
+      "    function GenSelOptions(opt)\n",
+      "        global run                = \"BayesC000\"\n",
+      "        global hahaha             = \"here\"\n",
+      "\n",
+      "\n",
+      " \n",
+      "        par=\"run\"\n",
+      "        ex = Expr(:(=),symbol(par),opt[par]) \n",
+      "        eval(ex)                             #e.g. run=opt[\"run\"]\n",
+      "        println(run) #??????\n",
+      "        #run                = \"BayesC0\"\n",
+      "        println(hahaha) #??????\n",
+      "\n",
+      "\n",
+      "        new(run)\n",
+      "    end\n",
+      "end"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "myOption=Dict()\n",
+      "myOption[\"run\"]          = \"BayesC\"\n",
+      "myOption[\"seed\"]         = 78912345\n",
+      "\n",
+      "option=GenSelOptions(myOption)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
