--- a/section_1_basics/rwfiles.ipynb
+++ b/section_1_basics/rwfiles.ipynb
@@ -386,19 +386,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<font,color=\"blue\">write</font> can also be used to write formatted numbers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "outfile = open(\"new.txt\", \"w\")\n",
+    "write(outfile,@sprintf(\"%0.3f\", .9999))\n",
+    "close(outfile)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "To learn more about reading and writing files, please see the official documentation. A package called **DataFrames** may be helpful. Another package **ODBC** can be used to work with a database."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 0.3.7",
+   "display_name": "Julia 0.3.5",
    "language": "julia",
-   "name": "julia 0.3"
+   "name": "julia-0.3"
   },
   "language_info": {
    "name": "julia",
-   "version": "0.3.7"
+   "version": "0.3.5"
   }
  },
  "nbformat": 4,
